removed horizontal scroll bar and fixed the footer

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -23,6 +23,7 @@
     max-width: 320px;
     padding-top: 48px;
     padding-bottom: 36px;
+    padding-left: 17px;
   }
 
   .footer__copyright {
