--- a/blocks/page.css
+++ b/blocks/page.css
@@ -8,20 +8,20 @@
   width: 100%;
   position: relative;
   margin: 45px auto 0;
-  height: 74px;
+  padding-bottom: 36.6px;
 }
 
 .page__content {
-  min-height: 100vh;
+  min-height: calc(100vh - 375px);
   margin: 0 auto;
   max-width: 1280px;
   padding-left: 17px;
   padding-right: 17px;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 480px) {
   .page__section {
-    padding-bottom: 0;
-    height: 56px;
+    padding-bottom: 27.6px;
   }
 }
