--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -13,6 +13,7 @@
     "description description";
   grid-template-columns: minmax(auto, 373px) auto;
   align-items: center;
+  justify-content: space-between;
 }
 
 .profile__edit-button {
@@ -84,7 +85,6 @@
   }
 
   .profile__info {
-    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
@@ -117,9 +117,7 @@
   }
 
   .profile__info {
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     padding-bottom: 36px;
@@ -137,12 +135,13 @@
     font-size: 22px;
     line-height: 26.63px;
     padding-top: 26.25px;
-    padding-left: 39px;
+    padding-left: 196px;
+    width: 219px;
+    padding-right: 10px 
     align-self: center;
   }
 
   .profile__description {
-    width: 100%;
     text-align: center;
     font-size: 14px;
     line-height: 16.94px;
@@ -166,5 +165,6 @@
     width: 18px;
     height: 18px;
     align-self: flex-end;
+    margin-right: 176px /* testing to see if this works. erase if needed */
   }
 }
